frontend/test/should_fail/hom_ret_002.grg

// should fail, because x is homomorphic with y, and y is deleted, so returned
// node x might be a deleted one

rule r:(Node) {
	x: Node;
	y: Node;
	hom(x, y);

	modify {
		delete(y);
		return(x);
	}
}

